--- a/inner.page.html
+++ b/inner.page.html
@@ -53,11 +53,11 @@
         </header>
         <div class="stripe-blue"></div>
         <main class="main">  
-              <section class="projects" id="projects">
+              <section class="projects-page" id="projects">
                 <h2 class="article-title">Наши проекты</h2>
                 <div class="grid_2_column margin-top-big">
-                <h3>Задание</h3>
-                <h3>Технологии</h3>
+                <div><h3>Задание</h3></div>
+                <div><h3>Технологии</h3></div>
                 </div>
                 <div class="grid_2_column margin-top-big">
                     <div >
@@ -65,6 +65,7 @@
                         <img class="project-desktop" src="images/projects/klaxon.jpg" alt="">
                     </div>
                     <div>
+                        <h3 class="project-name"> <p>mobile version</p></h3>
                         <img class="project-mobile"src="images/projects/project-1.jpg" alt="">
                     </div>
                 </div>
