--- a/index0.html
+++ b/index0.html
@@ -359,11 +359,29 @@
             </section>
             <div class="stripe-green2"></div>
 
-            <section class="sertificate" id="sertificate">
-                <h2 class="article-title">Наши проекты</h2>               
 
-                <h2 class="article-title2 above margin-top-big"></h2>
-                <div class="regular slider margin-top above margin-top-big">
+            <section class="projects" id="projects">
+                <h2 class="article-title">Наши проекты</h2>
+                <div class="project-tabs">
+                    <div class="project-tabs-block active-project-block" id="all">
+                        <img class="project-tabs-image" src="images/projects-tab-1.svg" alt="All projects" id="all">
+                        <a class="project-tabs-link" id="all">Все проекты</a>
+                    </div>
+                    <div class="project-tabs-block" id="shop">
+                        <img class="project-tabs-image" src="images/projects-tab-2.svg" alt="shops" id="shop">
+                        <a class="project-tabs-link" id="shop">Интернет магазины</a>
+                    </div>
+                    <div class="project-tabs-block" id="landig">
+                        <img class="project-tabs-image" src="images/projects-tab-3.svg" alt="landings" id="landig">
+                        <a class="project-tabs-link" id="landig">Landing pages</a>
+                    </div>
+                    <div class="project-tabs-block" id="multipage">
+                        <img class="project-tabs-image" src="images/projects-tab-4.svg" alt="multipages" id="multipage">
+                        <a class="project-tabs-link" id="multipage">Многостраничные </a>
+                    </div>
+                </div>
+
+                <div class="all-projects box ">
                     <div class="project-description landing">
                         <img class="project-images" src="images/projects/project-1.jpg" alt="project1">
                         <p class="project-image-descriptions">
@@ -400,9 +418,64 @@
                             Сайт об услугах строительных и отделочных работ
                         </p>
                     </div>
+                </div>
+            </section>
+            <div class="stripe-gray"></div>
+            <section class="sertificate" id="sertificate">
+                <h2 class="article-title">Сертификаты</h2>
+
+                <div class="center-sertificate">
+                    <img class="sertificate-image" src="images/sertificate/Anatoliy-php.jpg" alt="sertificate">
+                    <div class="sertificate-center-column">
+                        <p class="sertificate-title">Anatoliy Komarov</p>
+                        <p class="sertificate-description">
+                            Сертификат PHP Developer Advanced Level . OOP, MYSQL, Zend, Laravel, Symfony, Yii 2. 
+                        </p>
+                    </div>
+                </div>
+
+                <h2 class="article-title2 above">Наши сертификаты</h2>
+                <div class="regular slider margin-top above">
+                    <div class="sertificate-slider">
+                        <img src="images/sertificate/Anatoliy-php.jpg?text=1">
+                        <div class="sertificate-slider-block">
+                            <p class="sertificate-slider-title">Anatoliy Komarov</p>
+                            <p class="sertificate-slider-description">
+                                PHP Developer Advanced Level . OOP, MYSQL, Zend, Laravel, Symfony, Yii 2. 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="sertificate-slider">
+                        <img src="images/sertificate/Anatoliy_sertifikat.jpg?text=2">
+                        <div class="sertificate-slider-block">
+                            <p class="sertificate-slider-title">Anatoliy Komarov</p>
+                            <p class="sertificate-slider-description">
+                                 Web Developer Advanced level.JavaScript, CSS, HTML, PHP.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="sertificate-slider">
+                        <img src="images/sertificate/Dmitrij_sertifikat.jpg?text=3">
+                        <div class="sertificate-slider-block">
+                            <p class="sertificate-slider-title">Dzmitry Faliuk</p>
+                            <p class="sertificate-slider-description">
+                                Web Developer Advanced level.JavaScript, CSS, HTML, PHP.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="sertificate-slider">
+                        <img src="images/sertificate/Dmitriy-php.jpg?text=4">
+                        <div class="sertificate-slider-block">
+                            <p class="sertificate-slider-title">Dzmitry Faliuk</p>
+                            <p class="sertificate-slider-description">
+                                PHP Developer Advanced Level . OOP, MYSQL, Zend, Laravel, Symfony, Yii 2. 
+                            </p>
+                        </div>
+                    </div>
 
                 </div>
 
+                <img class="stripes2" src="images/stripes-2.png" alt="">
             </section>
 
             <div class="stripe-gray"></div>
