--- a/inner.page.html
+++ b/inner.page.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://1c-web.by" />
     <meta property="og:type" content="article" />
     <meta property="og:title"
-        content="Разработка веб-сайтов. Frontend && Backend. UI&&UX дизайн . ООО ПО Системс групп " />
+        content="Название проекта. ООО ПО Системс групп " />
     <meta property="og:description" content="Вёрстка сайтов (front-end), Создание динамических сайтов (PHP, back-end).  Разработка уникального дизайна UI&UX. Разработка дополнительных
         модулей для веб-сайтов. Установка систем управления      (MODX, Opencart, Wordpress,Bitrix)" />
     <meta property="og:image" content="https://1c-web.by/images/og-po_systems_group.jpg" />
@@ -51,10 +51,9 @@
 
 
         </header>
-        <div class="stripe-blue"></div>
         <main class="main">
             <section class="projects-page" id="projects">
-                <h2 class="article-title">Наши проекты</h2>
+                <h2 class="article-title">Название проекта </h2>
                 <div class="grid_2_column margin-top-big">
                     <div>
                         <h3>Задание</h3>
@@ -99,9 +98,54 @@
 
 
             </section>
+            <div class="stripe-green"></div>
+            <section class="sertificate" id="sertificate">
+                <h2 class="article-title">Наши проекты</h2>               
+
+                <h2 class="article-title2 above margin-top-big"></h2>
+                <div class="regular slider margin-top above margin-top-big">
+                    <div class="project-description landing">
+                        <img class="project-images" src="images/projects/project-1.jpg" alt="project1">
+                        <p class="project-image-descriptions">
+                            Сайт компании по оказанию бухгалтерских услуг
+                        </p>
+                    </div>
+                    <div class="project-description shop">
+                        <img class="project-images" src="images/projects/project-2.jpg" alt="project1">
+                        <p class="project-image-descriptions">
+                            Интернет-магазин по продаже электротехнических товаров
+                        </p>
+                    </div>
+                    <div class="project-description multipage">
+                        <img class="project-images" src="images/projects/project-3.jpg" alt="project1">
+                        <p class="project-image-descriptions">
+                            Сайт аренды жилья в Италии
+                        </p>
+                    </div>
+                    <div class="project-description landing">
+                        <img class="project-images" src="images/projects/project-4.jpg" alt="project1">
+                        <p class="project-image-descriptions">
+                            Сайт школы изучения итальянского языка
+                        </p>
+                    </div>
+                    <div class="project-description landing">
+                        <img class="project-images" src="images/projects/project-5.jpg" alt="project1">
+                        <p class="project-image-descriptions">
+                            Сайт итальянского ресторана
+                        </p>
+                    </div>
+                    <div class="project-description multipage">
+                        <img class="project-images" src="images/projects/project-6.jpg" alt="project1">
+                        <p class="project-image-descriptions">
+                            Сайт об услугах строительных и отделочных работ
+                        </p>
+                    </div>
+
+                </div>
+
+            </section>
+
             <div class="stripe-gray"></div>
-
-
             <section class="footer-banner">
                 <img class="footer-banner__image" src="./images/banners/footer-banner.png" alt="footer-banner">
                 <div class="footer-banner-description">
