--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             <section class="sertificate" id="sertificate">
                 <h2 class="article-title">Наши проекты</h2>               
 
-                <h2 class="article-title2 above margin-top-big"></h2>
+                <h2 class="article-title2 above "></h2>
                 <div class="regular slider margin-top above margin-top-big">
                     <div class="project-description landing">
                         <img class="project-images" src="images/projects/project-1.jpg" alt="project1">
