--- a/sertificate.html
+++ b/sertificate.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inner page. ООО "ПО СИСТЕМС ГРУПП"</title>
+    <title>Sertificate. ООО "ПО СИСТЕМС ГРУПП"</title>
     <meta name="description" content="Вёрстка сайтов (front-end), Создание динамических сайтов (PHP, back-end).  Разработка уникального дизайна UI&UX. Разработка дополнительных
     модулей для веб-сайтов. Установка систем управления      (MODX, Opencart, Wordpress,Bitrix)">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <meta property="og:url" content="https://1c-web.by" />
+    <meta property="og:url" content="https://1c-web.by/sertificate.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title"
-        content="Название проекта. ООО ПО Системс групп " />
+        content="Наши сертификаты. ООО ПО Системс групп " />
     <meta property="og:description" content="Вёрстка сайтов (front-end), Создание динамических сайтов (PHP, back-end).  Разработка уникального дизайна UI&UX. Разработка дополнительных
         модулей для веб-сайтов. Установка систем управления      (MODX, Opencart, Wordpress,Bitrix)" />
     <meta property="og:image" content="https://1c-web.by/images/og-po_systems_group.jpg" />
