--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             </section>
             <div class="stripe-green2"></div>
 
-            <section class="sertificate" id="sertificate">
+            <section class="sertificate" id="projects">
                 <h2 class="article-title">Наши проекты</h2>               
 
                 <h2 class="article-title2 above "></h2>
